[tool.poetry]
name = "stuart-landau"
version = "0.1.0"
description = "A Python package for simulating the Stuart-Landau model."
authors = ["Vivek Sharma <vivekmodgil@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.0"
numba = "^0.50"
scipy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
