[tool.poetry]
name = "stuart-landau"
version = "0.1.0"
description = "A Python package for simulating the Stuart-Landau model."
authors = ["Vivek Sharma <vivekmodgil@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
numpy = "*"
numba = "*"
scipy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
